Duplifaces can have wrong orientation with ngons #32646

Closed
opened 2012-09-24 18:52:05 +02:00 by Peter Haehnlein · 4 comments

%%%Hi folks

If you create an ngon the 'wrong' way, duplifaces get a bit crazy.
Here's how to create it: you add a face, you extrude one edge with an angle into a second face. You select all six verts, and hit F, then scale the ngon flat and voila, the attached dupliface object doesn't flip properly with the normal. It seems to merely rotate around the normal.
You can see the difference in the sample blend by selecting all faces and switching the normals.
I tested a bit more and if you scale the two middle verts outward, dupliverts react fine.

Best regards
Peter

Asus eeePC
windows 7
Blender 2.63.0
r46461:46487M
%%%

%%%Hi folks ``` If you create an ngon the 'wrong' way, duplifaces get a bit crazy. ``` ``` Here's how to create it: you add a face, you extrude one edge with an angle into a second face. You select all six verts, and hit F, then scale the ngon flat and voila, the attached dupliface object doesn't flip properly with the normal. It seems to merely rotate around the normal. ``` ``` You can see the difference in the sample blend by selecting all faces and switching the normals. ``` ``` I tested a bit more and if you scale the two middle verts outward, dupliverts react fine. ``` Best regards Peter Asus eeePC windows 7 Blender 2.63.0 r46461:46487M %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r50868.%%%

%%%fixed r50868.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Thank you very much!%%%

%%%Thank you very much!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32646
No description provided.