fix [#32646] Duplifaces can have wrong orientation with ngons

concave ngons could flip the dupliface, now use the faces normal when calculating the dupli-face.